--- a/anime/Justice_League_2017_Hindi_Dubbed_Full_Movie.html
+++ b/anime/Justice_League_2017_Hindi_Dubbed_Full_Movie.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Justice_League_2017_Hindi_Dubbed_Full_Movie</title>
+  <title>Justice League (2017) - Hindi Dubbed Full Movie</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     #adBox {
@@ -30,7 +30,6 @@
       border: none;
       color: white;
       font-size: 1.25rem;
-      line-height: 1;
       cursor: pointer;
     }
     @media (max-width: 640px) {
@@ -40,16 +39,16 @@
 </head>
 <body class="bg-black text-white font-mono">
 
-  <div class="p-6">
-    <h1 class="text-4xl font-bold text-pink-600">Justice_League_2017_Hindi_Dubbed_Full_Movie</h1>
-    <p class="text-gray-400 mb-6">Justice_League_2017_Hindi_Dubbed_Full_Movie</p>
+  <div class="max-w-4xl mx-auto p-6">
+    <h1 class="text-4xl font-bold text-pink-600 mb-2">Justice League (2017) - Hindi Dubbed Full Movie</h1>
+    <p class="text-gray-400 mb-6">Watch Justice League (2017) in Hindi and English | Full HD</p>
 
     <!-- Video Player -->
-    <div class="mb-4">
+    <div class="mb-6">
       <iframe id="videoPlayer" src="https://drive.google.com/file/d/1Di4ZcqQbhm4iKnJOE9suPCPFs42SBqcI/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
-      <div class="mt-2">
-        <h2 id="episodeTitle" class="text-xl font-semibold">Justice_League_2017_Hindi_Dubbed_Full_Movie</h2>
-        <p id="episodeDesc" class="text-gray-400">Justice_League_2017_Hindi_Dubbed_Full_Movie</p>
+      <div class="mt-3">
+        <h2 id="episodeTitle" class="text-xl font-semibold">Justice League (2017) - Hindi Dubbed</h2>
+        <p id="episodeDesc" class="text-gray-400">Enjoy the full movie dubbed in Hindi with English available.</p>
         <p id="uploadDate" class="text-gray-600 text-sm">Uploaded: 2025-04-25</p>
       </div>
     </div>
@@ -57,26 +56,18 @@
     <!-- Episode List -->
     <div id="episodeList" class="space-y-3"></div>
 
-    <!-- New Separate Ad Placement -->
-    <div class="mt-6">
-      <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
+    <!-- Separate Ad Placement -->
+    <div class="mt-8">
+      <script async data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
       <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
     </div>
-
   </div>
 
-  <!-- Ad Box (old rotating ads) -->
+  <!-- Floating Ad Box -->
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
     <div class="ad-slot active" id="ad1">
-      <iframe
-        src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
-        width="100%"
-        height="90"
-        frameborder="0"
-        scrolling="no"
-        allowfullscreen>
-      </iframe>
+      <iframe src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a" width="100%" height="90" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
     <div class="ad-slot" id="ad2">
       <script type="text/javascript">
@@ -92,14 +83,12 @@
     </div>
   </div>
 
-  <script type="text/javascript">
-    window.onbeforeunload = null;
-
+  <script>
     const episodes = [
       {
-        title: "Justice_League_2017_Hindi_Dubbed_Full_Movie",
+        title: "Justice League (2017) - Hindi Dubbed Full Movie",
         link: "https://drive.google.com/file/d/1Di4ZcqQbhm4iKnJOE9suPCPFs42SBqcI/preview",
-        description: "Justice_League_2017_Hindi_Dubbed_Full_Movie",
+        description: "Watch Justice League in Hindi with English option | Full HD",
         uploadDate: "2025-04-25"
       }
     ];
@@ -132,7 +121,7 @@
     }, 10000);
 
     // Draggable Ad Box
-    (function() {
+    (() => {
       const box = document.getElementById('adBox');
       let offsetX, offsetY, dragging = false;
       box.addEventListener('mousedown', e => {
@@ -154,7 +143,7 @@
       });
     })();
 
-    // Close ad
+    // Close Ad
     document.getElementById('closeAd').addEventListener('click', () => {
       document.getElementById('adBox').style.display = 'none';
     });
