--- a/anime/dragon-ball.html
+++ b/anime/dragon-ball.html
@@ -5,57 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dragon Ball Movie</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    /* Ad box styles */
-    #adBox {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      width: 90vw;
-      max-width: 728px;
-      background-color: #374151;
-      padding: 12px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.4);
-      z-index: 1000;
-      cursor: move;
-      transition: opacity 0.5s ease;
-    }
-    #adBox.hidden { opacity: 0; pointer-events: none; }
-    .ad-slot { display: none; }
-    .ad-slot.active { display: block; }
-    #closeAd {
-      position: absolute;
-      top: 6px;
-      right: 8px;
-      background: transparent;
-      border: none;
-      color: white;
-      font-size: 1.25rem;
-      line-height: 1;
-      cursor: pointer;
-    }
-    /* Tiny popup ad */
-    #tinyPopup {
-      display: none;
-      position: absolute;
-      top: 150px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 160px;
-      height: 90px;
-      background: rgba(0, 0, 0, 0.8);
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      z-index: 500;
-      text-align: center;
-      padding: 5px;
-      transition: opacity 0.5s;
-    }
-    @media (max-width: 640px) {
-      #adBox { bottom: 1rem; right: 1rem; }
-    }
-  </style>
 </head>
 <body class="bg-black text-white font-mono">
 
@@ -66,12 +15,6 @@
     <!-- Video Player -->
     <div class="mb-4 relative">
       <iframe id="videoPlayer" src="https://drive.google.com/file/d/1CCs06Ok3qo6k9B-SmgCeJS5950ZsUOot/preview" width="100%" height="400" frameborder="0" allow="autoplay" allowfullscreen class="rounded shadow"></iframe>
-
-      <!-- Tiny popup inside video -->
-      <div id="tinyPopup">
-        <script type='text/javascript' src='//pl26487838.profitableratecpm.com/b1/b5/3f/b1b53f67b160e09bda7bf4a781f629b2.js'></script>
-      </div>
-
       <div class="mt-2">
         <h2 id="episodeTitle" class="text-xl font-semibold">Dragon Ball Movie - Google Drive</h2>
         <p id="episodeDesc" class="text-gray-400">Dragon Ball full movie hosted on Google Drive.</p>
@@ -80,43 +23,14 @@
     </div>
 
     <!-- Episode List -->
-    <div id="episodeList" class="space-y-3">
-      <!-- Populated by JS -->
-    </div>
-  </div>
-
-  <!-- Ad Box -->
-  <div id="adBox" onmouseenter="showAdBox()" onmouseleave="startAutoHide()">
-    <button id="closeAd" aria-label="Close ad">×</button>
-    <div class="ad-slot active" id="ad1">
-      <iframe
-        src="d965c8699553fa2a225881c92e8494fe"
-        width="100%"
-        height="90"
-        frameborder="0"
-        scrolling="no"
-        allowfullscreen>
-      </iframe>
-    </div>
-    <div class="ad-slot" id="ad2">
-      <script type="text/javascript">
-        atOptions = {
-          'key': '38c97041ba09133421880a5339a162a8',
-          'format': 'iframe',
-          'height': 90,
-          'width': 728,
-          'params': {}
-        };
-      </script>
-      <script src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
-    </div>
+    <div id="episodeList" class="space-y-3"></div>
   </div>
 
   <script>
-    // --- Remove "leave site?" prompts ---
+    // Remove "leave site?" prompts
     window.onbeforeunload = null;
 
-    // --- Episodes loading ---
+    // Episodes loading
     const episodes = [
       {
         title: "Dragon Ball Movie - Google Drive",
@@ -132,7 +46,7 @@
     const desc = document.getElementById('episodeDesc');
     const date = document.getElementById('uploadDate');
 
-    episodes.forEach((ep, idx) => {
+    episodes.forEach((ep) => {
       const btn = document.createElement('button');
       btn.className = "w-full text-left bg-gray-800 hover:bg-gray-700 rounded p-3 shadow";
       btn.innerText = ep.title;
@@ -143,79 +57,6 @@
         date.innerText = "Uploaded: " + ep.uploadDate;
       };
       list.appendChild(btn);
-    });
-
-    // --- Ads rotation every 10s ---
-    let currentAd = 1;
-    setInterval(() => {
-      document.querySelectorAll('.ad-slot').forEach(el => el.classList.remove('active'));
-      currentAd = currentAd === 1 ? 2 : 1;
-      document.getElementById(`ad${currentAd}`).classList.add('active');
-    }, 10000);
-
-    // --- Auto-hide after 30s, re-show on hover ---
-    let hideTimeout;
-    function startAutoHide() {
-      clearTimeout(hideTimeout);
-      hideTimeout = setTimeout(() => {
-        document.getElementById('adBox').classList.add('hidden');
-      }, 30000);
-    }
-    function showAdBox() {
-      clearTimeout(hideTimeout);
-      document.getElementById('adBox').classList.remove('hidden');
-    }
-    startAutoHide();
-
-    // --- Make adBox draggable ---
-    (function() {
-      const box = document.getElementById('adBox');
-      let offsetX, offsetY, dragging = false;
-      box.addEventListener('mousedown', e => {
-        dragging = true;
-        offsetX = e.clientX - box.offsetLeft;
-        offsetY = e.clientY - box.offsetTop;
-        document.body.style.userSelect = 'none';
-      });
-      document.addEventListener('mousemove', e => {
-        if (!dragging) return;
-        box.style.left = `${e.clientX - offsetX}px`;
-        box.style.top = `${e.clientY - offsetY}px`;
-        box.style.bottom = 'auto';
-        box.style.right  = 'auto';
-      });
-      document.addEventListener('mouseup', () => {
-        dragging = false;
-        document.body.style.userSelect = '';
-      });
-    })();
-
-    // --- Close button handler ---
-    document.getElementById('closeAd').addEventListener('click', () => {
-      document.getElementById('adBox').style.display = 'none';
-    });
-
-    // --- Tiny popup logic ---
-    const tinyPopup = document.getElementById('tinyPopup');
-    let alreadyShown = false;
-
-    player.addEventListener('click', () => {
-      if (alreadyShown) return;
-      tinyPopup.style.display = 'block';
-      tinyPopup.style.opacity = '1';
-      alreadyShown = true;
-
-      // Auto-hide after 5 seconds
-      setTimeout(() => {
-        tinyPopup.style.opacity = '0';
-        setTimeout(() => {
-          tinyPopup.style.display = 'none';
-        }, 500); // wait fadeout
-      }, 5000);
-    });
-
-    window.addEventListener('resize', () => {
-      tinyPopup.style.left = '50%';
     });
   </script>
 
