--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -5,38 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wind Breaker Season 1</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    #adBox {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      width: 90vw;
-      max-width: 728px;
-      background-color: #374151;
-      padding: 12px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.4);
-      z-index: 1000;
-      cursor: move;
-      transition: opacity 0.5s ease;
-    }
-    .ad-slot { display: none; }
-    .ad-slot.active { display: block; }
-    #closeAd {
-      position: absolute;
-      top: 6px;
-      right: 8px;
-      background: transparent;
-      border: none;
-      color: white;
-      font-size: 1.25rem;
-      line-height: 1;
-      cursor: pointer;
-    }
-    @media (max-width: 640px) {
-      #adBox { bottom: 1rem; right: 1rem; }
-    }
-  </style>
 </head>
 
 <body class="bg-black text-white font-mono">
@@ -58,45 +26,13 @@
 
     <!-- Episode List -->
     <div id="episodeList" class="space-y-3"></div>
-
-    <!-- New Separate Ad Placement -->
-    <div class="mt-6">
-      <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
-      <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
-    </div>
-
-  </div>
-
-  <!-- Ad Box (old rotating ads) -->
-  <div id="adBox">
-    <button id="closeAd" aria-label="Close ad">×</button>
-    <div class="ad-slot active" id="ad1">
-      <iframe
-        src="https://www.profitableratecpm.com/ya4dw1q5i?key=b5695164ceecaa4c793ab32e9e4579f1"
-        width="100%"
-        height="90"
-        frameborder="0"
-        scrolling="no"
-        allowfullscreen>
-      </iframe>
-    </div>
-    <div class="ad-slot" id="ad2">
-      <script type="text/javascript">
-        atOptions = {
-          'key': '38c97041ba09133421880a5339a162a8',
-          'format': 'iframe',
-          'height': 90,
-          'width': 728,
-          'params': {}
-        };
-      </script>
-      <script src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
-    </div>
   </div>
 
   <script type="text/javascript">
+    // Remove "leave site?" prompts
     window.onbeforeunload = null;
 
+    // Episodes loading
     const episodes = [
       {
         title: "Wind Breaker Season 1 Episode 1",
@@ -183,62 +119,15 @@
       btn.className = "w-full text-left bg-gray-800 hover:bg-gray-700 rounded p-3 shadow";
       btn.innerText = ep.title;
 
-      let clickCount = 0;
-
-      btn.onclick = (e) => {
-        clickCount++;
-        if (clickCount <= 2) {
-          const adScript = document.createElement('script');
-          adScript.src = "//pl26487390.profitableratecpm.com/4b/cd/23/4bcd23553cd7968d87499a86650ba732.js";
-          document.body.appendChild(adScript);
-        } else {
-          player.src = ep.link;
-          title.innerText = ep.title;
-          desc.innerText = ep.description;
-          date.innerText = "Uploaded: " + ep.uploadDate;
-          clickCount = 0; // reset click count after showing episode
-        }
+      btn.onclick = () => {
+        player.src = ep.link;
+        title.innerText = ep.title;
+        desc.innerText = ep.description;
+        date.innerText = "Uploaded: " + ep.uploadDate;
       };
 
       list.appendChild(btn);
     });
-
-    // Rotate ads
-    let currentAd = 1;
-    setInterval(() => {
-      document.querySelectorAll('.ad-slot').forEach(el => el.classList.remove('active'));
-      currentAd = currentAd === 1 ? 2 : 1;
-      document.getElementById(`ad${currentAd}`).classList.add('active');
-    }, 10000);
-
-    // Draggable Ad Box
-    (function() {
-      const box = document.getElementById('adBox');
-      let offsetX, offsetY, dragging = false;
-      box.addEventListener('mousedown', e => {
-        dragging = true;
-        offsetX = e.clientX - box.offsetLeft;
-        offsetY = e.clientY - box.offsetTop;
-        document.body.style.userSelect = 'none';
-      });
-      document.addEventListener('mousemove', e => {
-        if (!dragging) return;
-        box.style.left = `${e.clientX - offsetX}px`;
-        box.style.top = `${e.clientY - offsetY}px`;
-        box.style.bottom = 'auto';
-        box.style.right = 'auto';
-      });
-      document.addEventListener('mouseup', () => {
-        dragging = false;
-        document.body.style.userSelect = '';
-      });
-    })();
-
-    // Close ad
-    document.getElementById('closeAd').addEventListener('click', () => {
-      document.getElementById('adBox').style.display = 'none';
-    });
-
   </script>
 
 </body>
